5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4482/executions/1582_996.log
== TEST (2019-03-30 18:46:17) 
-- CODE:
x=("*****")
x=("(* ° ° *)")
x=("*  ^  *")
x=("* --- *")
x= ("*****")
print("x")
print("x")
print("x")
print("x")
print("x")
-- OUTPUT:
x
x
x
x
x
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:46:24) 
-- CODE:
x=("*****")
x=("(* ° ° *)")
x=("*  ^  *")
x=("* --- *")
x= ("*****")
print("x")
print("x")
print("x")
print("x")
print("x")
-- EXECUTION TIME:
0.131997
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
x
x
x
x
x
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:47:15) 
-- CODE:
x="*****"
x="(* ° ° *)"
x=("*  ^  *")
x=("* --- *")
x= ("*****")
print"x"
print"x"
print"x"
print"x"
print"x"
-- ERROR:
File "XXXX", line 6
    print"x"
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:47:41) 
-- CODE:
x="*****"
x=(* ° ° *)
x="*  ^  *"
x="* --- *"
x= "*****"
print"x"
print"x"
print"x"
print"x"
print"x"
-- ERROR:
File "XXXX", line 2
    x=(* ° ° *)
         ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:50:23) 
-- CODE:
x=("*****")
x=(* ° ° *)
x=(*  ^  *)
x=(* --- *)
x= (*****)
print("x")
print("x")
print("x")
print("x")
print("x")
-- ERROR:
File "XXXX", line 2
    x=(* ° ° *)
         ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:54:52) 
-- CODE:
texto="*****"
texto="* ° ° *"
texto=("*  ^  *")
texto="(*  ^  *)"
texto=("*****")
print("texto")
print("texto")
print("texto")
print("texto")
print("texto")
-- OUTPUT:
texto
texto
texto
texto
texto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:56:32) 
-- CODE:
texto="*****"
texto="* o o *"
texto="*  ^  *"
texto="(* _ _ _ *)"
texto=("*****")
print("texto")
print("texto")
print("texto")
print("texto")
print("texto")
-- OUTPUT:
texto
texto
texto
texto
texto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:57:14) 
-- CODE:
texto="*****"
texto="* o o *"
texto="*  ^  *"
texto=(* _ _ _ *)
texto=("*****")
print("texto")
print("texto")
print("texto")
print("texto")
print("texto")
-- ERROR:
File "XXXX", line 4
    texto=(* _ _ _ *)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:58:32) 
-- CODE:
texto="*****"
texto="* o o *"
texto="*  ^  *"
texto="(* ___ *)"
texto=("*****")
print("texto")
print("texto")
print("texto")
print("texto")
print("texto")
-- OUTPUT:
texto
texto
texto
texto
texto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:59:21) 
-- CODE:
texto="*****"
texto="* o o *"
texto="*  ^  *"
texto="(* --- *)"
texto=("*****")
print("texto")
print("texto")
print("texto")
print("texto")
print("texto")
-- OUTPUT:
texto
texto
texto
texto
texto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 18:59:52) 
-- CODE:
texto="*****"
texto="* o o *"
texto="*  ^  *"
texto="(* --- *)"
texto="*****"
print("texto")
print("texto")
print("texto")
print("texto")
print("texto")
-- OUTPUT:
texto
texto
texto
texto
texto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 18:59:54) 
-- CODE:
texto="*****"
texto="* o o *"
texto="*  ^  *"
texto="(* --- *)"
texto="*****"
print("texto")
print("texto")
print("texto")
print("texto")
print("texto")
-- EXECUTION TIME:
0.130848
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
texto
texto
texto
texto
texto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:01:00) 
-- CODE:
texto="*****"
texto="(* o o *)"
texto="*  ^  *"
texto="* --- *"
texto="*****"
print("texto")
print("texto")
print("texto")
print("texto")
print("texto")
-- OUTPUT:
texto
texto
texto
texto
texto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:01:05) 
-- CODE:
texto="*****"
texto="(* o o *)"
texto="*  ^  *"
texto="* --- *"
texto="*****"
print("texto")
print("texto")
print("texto")
print("texto")
print("texto")
-- EXECUTION TIME:
0.224061
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
texto
texto
texto
texto
texto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:01:49) 
-- CODE:
texto="*****"
texto="(* o o *)"
texto="*  ^  *"
texto="* --- *"
texto="*****"
print("texto")
print("texto")
print("texto")
print("texto")
print("texto")
-- OUTPUT:
texto
texto
texto
texto
texto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:01:51) 
-- CODE:
texto="*****"
texto="(* o o *)"
texto="*  ^  *"
texto="* --- *"
texto="*****"
print("texto")
print("texto")
print("texto")
print("texto")
print("texto")
-- EXECUTION TIME:
0.201097
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
texto
texto
texto
texto
texto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:02:24) 
-- CODE:
texto="*****"
"(* o o *)"
"*  ^  *"
"* --- *"
"*****"
print("texto")
print("texto")
print("texto")
print("texto")
print("texto")
-- EXECUTION TIME:
0.154286
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
texto
texto
texto
texto
texto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:02:50) 
-- CODE:
texto="*****" "(* o o *)" "*  ^  *"
"* --- *" "*****"
print("texto")
print("texto")
print("texto")
print("texto")
print("texto")
-- EXECUTION TIME:
0.21162
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
texto
texto
texto
texto
texto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:03:53) 
-- CODE:
texto="*****"
texto="(* o o *)"
texto="*  ^  *"
texto="* --- *"
texto="*****"
print("texto")
print("texto")
print("texto")
print("texto")
print("texto")
-- OUTPUT:
texto
texto
texto
texto
texto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:04:21) 
-- CODE:
texto="*****"
texto="(* o o *)"
texto="*  ^  *"
texto="* --- *"
texto="*****"
print"texto"
print"texto"
print"texto"
print"texto"
print"texto"
-- ERROR:
File "XXXX", line 6
    print"texto"
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:04:25) 
-- CODE:
texto="*****"
texto="(* o o *)"
texto="*  ^  *"
texto="* --- *"
texto="*****"
print"texto"
print"texto"
print"texto"
print"texto"
print"texto"
-- EXECUTION TIME:
0.180313
-- ERROR:
  File "/home/codebench/codes/1582/996/main.py", line 6
    print"texto"
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:04:42) 
-- CODE:
texto="*****"
texto="(* o o *)"
texto="*  ^  *"
texto="* --- *"
texto="*****"
print="texto"
print"texto"
print"texto"
print"texto"
print"texto"
-- ERROR:
File "XXXX", line 7
    print"texto"
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:05:02) 
-- CODE:
texto="*****"
texto="(* o o *)"
texto="*  ^  *"
texto="* --- *"
texto="*****"
print="texto"
print="texto"
print="texto"
print="texto"
print="texto"
-- ERROR:
File "XXXX", line 7
    print"texto"
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:05:06) 
-- CODE:
texto="*****"
texto="(* o o *)"
texto="*  ^  *"
texto="* --- *"
texto="*****"
print="texto"
print="texto"
print="texto"
print="texto"
print="texto"
-- EXECUTION TIME:
0.142247
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:06:22) 
-- CODE:
texto="*****"
texto="(* o o *)"
texto="*  ^  *"
texto="* --- *"
texto="*****"
print(texto)
print(texto)
print(texto)
print(texto)
print(texto)
-- OUTPUT:
*****
*****
*****
*****
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:06:26) 
-- CODE:
texto="*****"
texto="(* o o *)"
texto="*  ^  *"
texto="* --- *"
texto="*****"
print(texto)
print(texto)
print(texto)
print(texto)
print(texto)
-- EXECUTION TIME:
0.138102
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
*****
*****
*****
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:06:37) 
-- CODE:
texto="*****"
texto="(* o o *)"
texto="*  ^  *"
texto="* --- *"
texto="*****"
print(texto)
print(texto)
print(texto)
print(texto)
print(texto)
-- OUTPUT:
*****
*****
*****
*****
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 19:07:35) 
-- CODE:
texto="*****"
t="(* o o *)"
e="*  ^  *"
x="* --- *"
z="*****"
print(texto)
print(t)
print(e)
print(x)
print(z)
-- OUTPUT:
*****
(* o o *)
*  ^  *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 19:07:39) 
-- CODE:
texto="*****"
t="(* o o *)"
e="*  ^  *"
x="* --- *"
z="*****"
print(texto)
print(t)
print(e)
print(x)
print(z)
-- EXECUTION TIME:
0.251534
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
*  ^  *
* --- *
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
